--- a/lang_sam_wrapper/config/config.yaml
+++ b/lang_sam_wrapper/config/config.yaml
@@ -4,6 +4,17 @@ lang_sam_node:
     sam_model: "sam2.1_hiera_small"
     # セグメンテーション対象のテキストプロンプト
     text_prompt: "white line. human. red pylon. wall. car. building. mobility. road."
+    
+    # CUDA設定パラメータ
+    cuda_arch_list: "6.0;6.1;7.0;7.5;8.0;8.6" # CUDA アーキテクチャリスト
+    force_cpu_mode: false # CPUモード強制（true/false）
+    
+    # パフォーマンス設定
+    enable_torch_no_grad: true # torch.no_grad()の使用
+    enable_gpu_memory_cleanup: true # GPU メモリクリーンアップの有効化
+    
+    # ログ設定
+    enable_fps_logging: true # FPS情報の表示
 
 optflow_node:
   ros__parameters:
@@ -12,7 +23,7 @@ optflow_node:
     text_prompt: "white line. human. red pylon. wall. car. building. mobility. road."
     
     # トラッキングのリセット間隔（フレーム数）
-    reset_interval: 3 # セグメンテーション実行間隔（より頻繁に実行）
+    reset_interval: 30  # セグメンテーション実行間隔（より頻繁に実行）
     
     # トラッキング対象の設定
     tracking_targets: "white line. human. red pylon. car. mobility." # "" → 全てのオブジェクトをトラッキング
@@ -23,9 +34,9 @@ optflow_node:
     max_per_cell: 40 # 1セルあたりの最大トラッキング数（安定性のため削減）
     
     # トラッキングパラメータ
-    quality_level: 0.0001 # 特徴点検出の品質レベル
+    quality_level: 0.01 # 特徴点検出の品質レベル（改善: より安定した特徴点検出）
     min_distance: 1 # 特徴点間の最小距離
-    block_size: 1 # 特徴点検出のブロックサイズ
+    block_size: 3 # 特徴点検出のブロックサイズ（改善: デフォルト値に戻す）
     
     # トラッキング可視化パラメータ
     tracking_circle_radius: 4 # トラッキング円の半径
@@ -37,4 +48,22 @@ optflow_node:
     optical_flow_max_level: 2 # ピラミッドの最大レベル
     optical_flow_criteria_eps: 0.03 # 収束判定のイプシロン値
     optical_flow_criteria_max_count: 10 # 最大反復回数
+    
+    # メモリ管理パラメータ
+    max_tracking_points: 10000 # 最大トラッキング点数
+    memory_cleanup_interval: 100 # メモリクリーンアップ間隔（フレーム数）
+    
+    # CUDA設定パラメータ
+    cuda_arch_list: "6.0;6.1;7.0;7.5;8.0;8.6" # CUDA アーキテクチャリスト
+    force_cpu_mode: false # CPUモード強制（true/false）
+    
+    # ログ設定
+    enable_parameter_logging: true # パラメータログ出力の有効化
+    enable_fps_logging: true # FPS情報の表示
+    log_level_override: "" # ログレベル上書き（"DEBUG", "INFO", "WARN", "ERROR"）
+    
+    # パフォーマンス設定
+    enable_torch_no_grad: true # torch.no_grad()の使用
+    enable_memory_optimization: true # メモリ最適化の有効化
+    enable_gpu_memory_cleanup: true # GPU メモリクリーンアップの有効化
 
