--- a/lang_sam_wrapper/config/config.yaml
+++ b/lang_sam_wrapper/config/config.yaml
@@ -1,116 +1,39 @@
-lang_sam_node:
-  ros__parameters:
-    # SAMモデルの種類を指定
-    sam_model: "sam2.1_hiera_small"
-    # セグメンテーション対象のテキストプロンプト
-    text_prompt: "white line. human. red pylon. wall. car. building. mobility. road."
-    
-    # CUDA設定パラメータ
-    cuda_arch_list: "6.0;6.1;7.0;7.5;8.0;8.6" # CUDA アーキテクチャリスト
-    force_cpu_mode: false # CPUモード強制（true/false）
-    
-    # パフォーマンス設定
-    enable_torch_no_grad: true # torch.no_grad()の使用
-    enable_gpu_memory_cleanup: true # GPU メモリクリーンアップの有効化
-    
-    # ログ設定
-    enable_fps_logging: true # FPS情報の表示
-
 langsam_with_optflow_node:
-  ros__parameters:
-    # LangSAM parameters（統合された機能）
-    sam_model: "sam2.1_hiera_small"
-    text_prompt: "white line. red pylon. human. wall. car. building. mobility. road."
-    box_threshold: 0.3  # バウンディングボックス検出閾値
-    text_threshold: 0.3  # テキストマッチング閾値
-    
-    # トラッキングのリセット間隔（秒）
-    reset_interval: 3.0  # セグメンテーション実行間隔（秒単位）
-    
-    # トラッキング対象の設定
-    tracking_targets: "white line. red pylon. human. car. mobility." # "" → 全てのオブジェクトをトラッキング
-    
-    # グリッド設定
-    grid_size_x: 15
-    grid_size_y: 12 
-    max_per_cell: 40 # 1セルあたりの最大トラッキング数（安定性のため削減）
-    
-    # トラッキングパラメータ
-    quality_level: 0.01 # 特徴点検出の品質レベル（改善: より安定した特徴点検出）
-    min_distance: 1 # 特徴点間の最小距離
-    block_size: 3 # 特徴点検出のブロックサイズ（改善: デフォルト値に戻す）
-    
-    # トラッキング可視化パラメータ
-    tracking_circle_radius: 6 # トラッキング円の半径
-    tracking_circle_color: 255 # トラッキング円の色
-    
-    # オプティカルフローパラメータ  
-    optical_flow_win_size_x: 15 # オプティカルフローウィンドウサイズX
-    optical_flow_win_size_y: 15 # オプティカルフローウィンドウサイズY  
-    optical_flow_max_level: 2 # ピラミッドの最大レベル
-    optical_flow_criteria_eps: 0.03 # 収束判定のイプシロン値
-    optical_flow_criteria_max_count: 10 # 最大反復回数
-    
-    # 密度サンプリング設定
-    enable_dense_sampling: true # 高密度サンプリングの有効化
-    dense_sampling_step: 3 # ピクセル間隔（小さいほど高密度）
-    max_dense_points_per_mask: 50000 # マスクあたりの最大点数
-    
-    # メモリ管理パラメータ
-    max_tracking_points: 100000 # 最大トラッキング点数（密度サンプリング用に増加）
-    memory_cleanup_interval: 100 # メモリクリーンアップ間隔（フレーム数）
-    
-    # CUDA設定パラメータ
-    cuda_arch_list: "6.0;6.1;7.0;7.5;8.0;8.6" # CUDA アーキテクチャリスト
-    force_cpu_mode: false # CPUモード強制（true/false）
-    
-    # ログ設定
-    enable_parameter_logging: true # パラメータログ出力の有効化
-    enable_fps_logging: true # FPS情報の表示
-    log_level_override: "" # ログレベル上書き（"DEBUG", "INFO", "WARN", "ERROR"）
-    
-    # パフォーマンス設定
-    enable_torch_no_grad: true # torch.no_grad()の使用
-    enable_memory_optimization: true # メモリ最適化の有効化
-    enable_gpu_memory_cleanup: true # GPU メモリクリーンアップの有効化
-
-# 新しいフロー用パラメータ設定
-new_langsam_optflow_node:
   ros__parameters:
     # 基本LangSAMパラメータ
     sam_model: "sam2.1_hiera_small"
     text_prompt: "white line. red pylon. human. wall. car. building. mobility. road."
     box_threshold: 0.3
     text_threshold: 0.2
-    tracking_targets: "white line. red pylon. human. car."  # 空文字列 = すべてのGroundingDINO検出結果をトラッキング
+    tracking_targets: "white line. red pylon. human. car."
     
-    # 新フロー用実行間隔パラメータ
-    grounding_dino_interval: 1.0  # GroundingDINO実行間隔（秒）
-    sam2_interval: 0.1  # SAM2実行間隔（秒）
+    # 実行間隔パラメータ（最適化版）
+    grounding_dino_interval: 2.0  # GroundingDINO実行間隔（秒）
+    sam2_interval: 0.05  # SAM2実行間隔（秒）
     enable_sam2_every_frame: false  # SAM2毎フレーム実行
     
-    # Harris corner検出パラメータ
-    harris_max_corners: 10  # バウンディングボックス内の最大特徴点数
-    harris_quality_level: 0.01  # Harris corner品質レベル
-    harris_min_distance: 10  # Harris corner間の最小距離
+    # Harris corner検出パラメータ（最適化版）
+    harris_max_corners: 5  # バウンディングボックス内の最大特徴点数
+    harris_quality_level: 0.02  # Harris corner品質レベル
+    harris_min_distance: 15  # Harris corner間の最小距離
     harris_block_size: 3  # Harris corner検出ブロックサイズ
     harris_k: 0.04  # Harris検出器のkパラメータ
     use_harris_detector: true  # Harris検出器使用（false=Shi-Tomasi）
     
     # 特徴点選択パラメータ
-    feature_selection_method: "center_point"  # 特徴点選択方法（center_point, harris_response, edge_centroid, center_closest, random）
+    feature_selection_method: "center_point"  # 特徴点選択方法
     
     # エッジ検出パラメータ
     canny_low_threshold: 50   # Canny edge検出の低閾値
     canny_high_threshold: 150 # Canny edge検出の高閾値
     min_edge_pixels: 10       # 有効とみなす最小エッジピクセル数
     
-    # オプティカルフローパラメータ
-    optical_flow_win_size_x: 30  # オプティカルフローウィンドウサイズX
-    optical_flow_win_size_y: 30  # オプティカルフローウィンドウサイズY
-    optical_flow_max_level: 5  # ピラミッドの最大レベル
-    optical_flow_criteria_eps: 0.03  # 収束判定のイプシロン値
-    optical_flow_criteria_max_count: 20  # 最大反復回数
+    # オプティカルフローパラメータ（最適化版）
+    optical_flow_win_size_x: 21  # オプティカルフローウィンドウサイズX
+    optical_flow_win_size_y: 21  # オプティカルフローウィンドウサイズY
+    optical_flow_max_level: 3  # ピラミッドの最大レベル
+    optical_flow_criteria_eps: 0.01  # 収束判定のイプシロン値
+    optical_flow_criteria_max_count: 15  # 最大反復回数
     
     # 追跡検証パラメータ
     max_displacement: 50.0  # 最大変位閾値（ピクセル）
@@ -128,5 +51,5 @@ new_langsam_optflow_node:
     # ログ設定
     enable_parameter_logging: true
     enable_fps_logging: true
-    log_level_override: ""
+    log_level_override: ""  
 
