--- a/lang_sam_wrapper/package.xml
+++ b/lang_sam_wrapper/package.xml
@@ -7,11 +7,24 @@
   <maintainer email="babaryusei.kw@gmail.com">Ryusei Baba</maintainer>
   <license>Apache-2.0</license>
 
+  <!-- ビルドツール依存 -->
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
+  
+  <!-- ビルド時依存 -->
+  <build_depend>rclcpp</build_depend>
+  <build_depend>rclpy</build_depend>
+  <build_depend>libopencv-dev</build_depend>
+  <build_depend>libopencv-contrib-dev</build_depend>
+  <build_depend>python3-dev</build_depend>
+  <build_depend>pybind11_vendor</build_depend>
+  <build_depend>pybind11-dev</build_depend>
+  
   <!-- 実行時に必要な依存 -->
   <exec_depend>rclpy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
-  <exec_depend>lang_sam_msgs</exec_depend>
+  <exec_depend>libopencv-contrib-dev</exec_depend>
   
   <!-- AI/ML依存パッケージ -->
   <exec_depend>python3-torch</exec_depend>
@@ -30,6 +43,6 @@
   <test_depend>python3-pytest</test_depend>
 
   <export>
-    <build_type>ament_python</build_type>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
