--- a/lang_sam_wrapper/CMakeLists.txt
+++ b/lang_sam_wrapper/CMakeLists.txt
@@ -54,6 +54,7 @@ install(TARGETS csrt_native
 install(PROGRAMS
   lang_sam_wrapper/debug_lang_segment_anything.py
   lang_sam_wrapper/lang_sam_tracker_node_native.py
+  lang_sam_wrapper/lang_sam_tracker_node.py
   lang_sam_wrapper/multi_view_node.py
   DESTINATION lib/${PROJECT_NAME}
 )
