--- a/lang_sam_wrapper/package.xml
+++ b/lang_sam_wrapper/package.xml
@@ -23,8 +23,10 @@
   <!-- 実行時に必要な依存 -->
   <exec_depend>rclpy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>libopencv-contrib-dev</exec_depend>
+  <exec_depend>lang_sam_msgs</exec_depend>
   
   <!-- AI/ML依存パッケージ -->
   <exec_depend>python3-torch</exec_depend>
